--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
-	"python.pythonPath": "/bin/python3.6",
-	"python.formatting.autopep8Args": ["--ignore", "E402"]
+	"python.pythonPath": "/usr/bin/python",
+	"python.formatting.autopep8Args": [
+		"--ignore",
+		"E402"
+	],
+	"python.linting.pylintEnabled": true,
+	"python.linting.enabled": true
 }
